Fix various layout issues. Disable file serving in backend by default. #patch

--- a/shirakami-srs-web/src/app/components/modals/create-edit-card-modal/create-edit-card-modal.component.scss
+++ b/shirakami-srs-web/src/app/components/modals/create-edit-card-modal/create-edit-card-modal.component.scss
@@ -57,6 +57,9 @@ app-checkbox {
 }
 
 .modal-content {
+    input {
+        max-width: 100%;
+    }
     h2 {
         margin: 0.5em 0;
     }
