--- a/shirakami-srs-web/src/app/views/dashboard-view/dashboard-view.component.scss
+++ b/shirakami-srs-web/src/app/views/dashboard-view/dashboard-view.component.scss
@@ -8,13 +8,22 @@
 .lessons-reviews-card {
     button {
         height: 100px;
+        align-items: flex-end;
         .btn-content {
+            margin-top: -0.5em;
             width: 100%;
-            height: 100%;
             display: flex;
             flex-direction: row;
+            align-content: space-between;
             align-items: flex-end;
             justify-content: space-between;
+            flex-wrap: wrap;
+            *:first-child {
+                margin-right: 1em;
+            }
+            * {
+                margin-top: 0.5em;
+            }
         }
     }
 }
