--- a/shirakami-srs-web/src/app/views/lesson-review-view/lesson-review-view.component.scss
+++ b/shirakami-srs-web/src/app/views/lesson-review-view/lesson-review-view.component.scss
@@ -286,9 +286,6 @@
 }
 
 .input-bar {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
     height: 5em;
     position: relative;
     overflow: hidden;
@@ -296,7 +293,8 @@
     @include shadow(2, true);
 
     input {
-        flex: 1;
+        width: 100%;
+        height: 100%;
         border-radius: 0;
         text-align: center;
         background: var(--color-surface);
