--- a/shirakami-srs-web/src/styles/misc.scss
+++ b/shirakami-srs-web/src/styles/misc.scss
@@ -3,7 +3,6 @@
     flex-shrink: 0;
     background: white;
     border-radius: 9999999px;
-    margin-left: 1em;
     padding: 0.25em 0.5em;
     min-width: 2em;
     color: var(--scoped-bg-color);
